# ReChat-server

./: Cargo.toml  LICENSE  README.md  rechat.db
.github/workflows/: ci.yml  release.yml
.trae/documents/: ReChat_sender_plan.md
.trae/rules/: 1.md
ReChat-sender/: .gitignore  Cargo.toml  DEPLOY.md  README.md
ReChat-sender/src/: lib.rs  main.rs
ReChat-sender/src/api/: mod.rs
ReChat-sender/src/api/endpoints/: messages.rs
ReChat-sender/src/cli/: mod.rs
ReChat-sender/src/models/: message.rs
ReChat-sender/src/web/: mod.rs
ReChat-sender/tests/: sender.rs
compass/: ReChat_sender_fix_plan.md  onebot_adapter_plan.md  todolist.md
docs/: code-review-2026-04-26.md
docs/api/: README.md
scripts/: build.rs
src/: lib.rs  main.rs
src/adapters/: message_sender.rs  mod.rs  protocol.rs
src/api/: mod.rs
src/api/endpoints/: messages.rs  mod.rs  ws_client.rs
src/cli/: mod.rs
src/core/: adapter.rs  broadcaster.rs  config.rs  logging.rs  message.rs  mod.rs  plugin.rs
src/plugins/: manager.rs  plugin.rs
src/services/: queue.rs
src/web/: mod.rs
tests/: sender.rs
